<resources>
    <string name="app_name">RAP Messaging</string>
    <string name="name">Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Message</string>
    <string name="online">Online</string>
    <string name="or_sign_in_with">or sign in with</string>

    //facebook string

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="incoming_meeting_invitation">Incoming Call...</string>
    <string name="sending_meeting_invitation">Calling...</string>


</resources>